# sports-skills

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README_PYPI.md  TESTING.md  pyproject.toml  test_arsenal_analysis.py
.github/workflows/: build-site.yml  ci.yml
reports/health/: 2026-02-18-issue.md  2026-02-18.json  2026-02-18.md  2026-02-19.json  2026-02-19.md  2026-02-20.json  2026-02-20.md
scripts/: README.md  nightly_health_check.py  nightly_improve.py  schema_baseline.json
site/: index.html
skills/betting/: SKILL.md
skills/cbb-data/: SKILL.md
skills/cfb-data/: SKILL.md
skills/fastf1/: SKILL.md
skills/fastf1/references/: commands.md  schemas.md
skills/football-data/: SKILL.md
skills/golf-data/: SKILL.md
skills/golf-data/scripts/: validate_params.sh
skills/kalshi/: SKILL.md
skills/kalshi/references/: commands.md  series-tickers.md
skills/machina/: SKILL.md
skills/markets/: SKILL.md
skills/mlb-data/: SKILL.md
skills/nba-data/: SKILL.md
skills/nfl-data/: SKILL.md
skills/nfl-data/scripts/: validate_params.sh
skills/nhl-data/: SKILL.md
skills/nhl-data/scripts/: validate_params.sh
skills/polymarket/: SKILL.md
skills/polymarket/references/: api.md  commands.md
skills/polymarket/scripts/: validate_params.sh
skills/sports-news/: SKILL.md
skills/tennis-data/: SKILL.md
skills/wnba-data/: SKILL.md
src/sports_skills/: __init__.py  __main__.py  _espn_base.py  _response.py  cli.py
src/sports_skills/agent/: __init__.py  __main__.py  _agent.py  _config.py  _prompts.py  _setup.py  _tui.py
src/sports_skills/agent/tools/: __init__.py  cbb.py  cfb.py  f1.py  football.py  golf.py  kalshi.py  mlb.py  nba.py  news.py  nfl.py  nhl.py  polymarket.py  tennis.py  wnba.py
src/sports_skills/betting/: __init__.py  _calcs.py
src/sports_skills/cbb/: __init__.py  _connector.py
src/sports_skills/cfb/: __init__.py  _connector.py
src/sports_skills/f1/: __init__.py  _connector.py
src/sports_skills/football/: __init__.py  _connector.py
src/sports_skills/golf/: __init__.py  _connector.py
src/sports_skills/kalshi/: __init__.py  _connector.py
src/sports_skills/markets/: _connector.py
src/sports_skills/metadata/: __init__.py  _connector.py
src/sports_skills/mlb/: __init__.py  _connector.py
src/sports_skills/nba/: __init__.py  _cdn.py  _connector.py
src/sports_skills/news/: __init__.py  _connector.py
src/sports_skills/nfl/: __init__.py  _connector.py
src/sports_skills/nhl/: __init__.py  _connector.py
src/sports_skills/polymarket/: __init__.py  _cli.py  _connector.py
src/sports_skills/tennis/: __init__.py  _connector.py
src/sports_skills/wnba/: __init__.py  _connector.py
tests/: test_agent_tools.py  test_betting.py  test_imports.py  test_polymarket_cli.py  test_unit.py  test_watch.py
