[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sports-skills"
version = "0.5.1"
description = "Lightweight Python SDK for sports data — football, F1, NFL, NBA, WNBA, NHL, MLB, tennis, prediction markets, and news"
description = "Lightweight Python SDK for sports data — football, F1, NFL, NBA, WNBA, NHL, MLB, CFB, CBB, prediction markets, and news"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    { name = "Machina Sports", email = "hello@machina.gg" },
]
keywords = ["sports", "football", "f1", "nfl", "nba", "wnba", "nhl", "mlb", "tennis", "atp", "wta", "polymarket", "kalshi", "prediction-markets", "news"]
keywords = ["sports", "football", "f1", "nfl", "nba", "wnba", "nhl", "mlb", "cfb", "cbb", "college-football", "college-basketball", "ncaa", "polymarket", "kalshi", "prediction-markets", "news"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "feedparser>=6.0",
]

[project.optional-dependencies]
f1 = ["fastf1>=3.0", "pandas>=2.0"]
nfl = ["nfl-data-py>=0.3"]
nba = []
wnba = []
nhl = []
mlb = []
tennis = []
cfb = []
cbb = []
all = ["fastf1>=3.0", "pandas>=2.0", "feedparser>=6.0", "nfl-data-py>=0.3"]
[project.scripts]
sports-skills = "sports_skills.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sports_skills"]